test/functions/compilation-errors/error-stack-trace.good
error-stack-trace.chpl:1: In function 'h':
error-stack-trace.chpl:2: error: Cannot assign to string from int(64)
error-stack-trace.chpl:6: function 'h' called as h(arg: string) within function 'g'
error-stack-trace.chpl:10: function 'g' called as g(arg: string)
